feat(notes): filter
